# slice-of-array

./: CHANGELOG.md  Cargo.toml  README.md  UNLICENSE  lib.rs
.github/workflows/: ci.yml
