[package]
name = "slice-of-array"
version = "0.3.2"
authors = ["Michael Lamparski <diagonaldevice@gmail.com>"]
documentation = "https://docs.rs/slice-of-array"
repository = "https://github.com/ExpHP/slice-of-array"
description = "Extension traits for casting between slices and slices of arrays. (&[T] <-> &[[T; n]])"
keywords = ["slice", "util", "no_std", "flatten", "nest"]
categories = ["data-structures"]
readme = "README.md"
license = "Unlicense"
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]

[dev-dependencies]
version-sync = "0.9"

[features]
# Link to std.  In the future, may also enable features that interop with std.
std = []

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
